--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -11,7 +11,7 @@
                          propertyForm.controls['MinimumStay'] &&
                          propertyForm.controls['BoxUrl']">
                 <div class="card">
-                    <div class="card-content p-b-15">
+                    <div class="property-tabs card-content p-b-15">
                         <ul class="nav nav-pills main-nav-pills">
                             <li class="nav-pill active"
                                 [ngClass]="{'form-error': (!propertyForm.controls['Bathrooms'].valid ||
