--- a/app/shared/components/header/header.component.html
+++ b/app/shared/components/header/header.component.html
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <a href="#notification" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="material-icons">notifications</i>
                         <span class="notification">5</span>
                         <p class="hidden-lg hidden-md">
@@ -55,11 +55,16 @@
                     </ul>
                     -->
                 </li>
-                <li>
-                    <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
+                <li class="dropdown">
+                    <a href="#logout" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="material-icons">person</i>
                         <p class="hidden-lg hidden-md">Profile</p>
                     </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/" (click)="onLoggedout()">Logout</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="separator hidden-lg hidden-md"></li>
             </ul>
