--- a/app/pages/properties/metafilterheading/metafilterheading.component.html
+++ b/app/pages/properties/metafilterheading/metafilterheading.component.html
@@ -27,7 +27,7 @@
         <div class="col-xs-12">
             <div class="form-group label-floating">
                 <label class="control-label">Other Housekeeping Information</label>
-                <textarea class="form-control" formControlName="OtherHousekeepingInfo"></textarea>
+                <textarea class="form-control" formControlName="OtherHousekeepingInfo" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
             </div>
         </div>
     </div>
@@ -86,6 +86,6 @@
     </div>
     <div class="form-group label-floating">
         <label class="control-label">Unique Benefits</label>
-        <textarea class="form-control" formControlName="Benefits"></textarea>
+        <textarea class="form-control" formControlName="Benefits" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
     </div>
 </div>
