--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -109,7 +109,7 @@
                     <div class="col-xs-12">
                         <div class="form-group label-floating">
                             <label class="control-label">Summary</label>
-                            <textarea class="form-control" formControlName="Summary"></textarea>
+                            <textarea class="form-control" formControlName="Summary" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                     <div class="col-xs-12">
                         <div class="form-group label-floating">
                             <label class="control-label">Description</label>
-                            <textarea class="form-control" formControlName="Description"></textarea>
+                            <textarea class="form-control" formControlName="Description" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                     <div class="col-xs-12">
                         <div class="form-group label-floating">
                             <label class="control-label">Other Important Information</label>
-                            <textarea class="form-control" formControlName="OtherInfo"></textarea>
+                            <textarea class="form-control" formControlName="OtherInfo" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
                         </div>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <div class="form-group label-floating">
                             <label class="control-label">Kitchen Information</label>
-                            <textarea type="text" class="form-control" formControlName="KitchenInfo"></textarea>
+                            <textarea type="text" class="form-control" formControlName="KitchenInfo" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
                         </div>
                     </div>
                 </div>
