--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -260,7 +260,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <div class="form-group label-floating">
                             <label class="control-label">Kitchen Information</label>
-                            <textarea type="text" class="form-control" formControlName="KitchenInfo" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
+                            <textarea md-autosize type="text" class="form-control" formControlName="KitchenInfo" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
                         </div>
                     </div>
                 </div>
@@ -279,7 +279,7 @@
                                 <div class="col-sm-12 col-md-4 col-lg-4">
                                     <div class="form-group label-floating">
                                         <label class="control-label">Bedroom Description</label>
-                                        <input type="text" class="form-control" [formControl]="control.controls.Description">
+                                        <textarea class="form-control" [formControl]="control.controls.Description" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-4 col-lg-4">
@@ -315,7 +315,7 @@
                             <div class="col-sm-12 col-md-4 col-lg-4">
                                 <div class="form-group label-floating">
                                     <label class="control-label">Bathroom Description</label>
-                                    <input type="text" class="form-control" [formControl]="control.controls.Description">
+                                    <textarea class="form-control" [formControl]="control.controls.Description" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-4 col-lg-4">
