--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -39,7 +39,7 @@
                                             <i class="material-icons">email</i>
                                         </span>
                                         <div class="form-group label-floating">
-                                            <label class="control-label">Email address</label>
+                                            <label class="control-label">Email</label>
                                             <input type="text" class="form-control" formControlName="Email">
                                         </div>
                                     </div>
