Password icon fix

--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -46,7 +46,7 @@
                                     <div class="input-group" [ngClass]="{'form-error': !loginForm.controls.Password.valid && loginForm.controls.Password.touched
                                                                    || !loginForm.controls.Password.valid && errorForm}">
                                         <span class="input-group-addon">
-                                            <i class="material-icons">lock_outline</i>
+                                            <i class="material-icons">lock</i>
                                         </span>
                                         <div class="form-group label-floating">
                                             <label class="control-label">Password</label>
