--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-primary navbar-transparent navbar-absolute">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
+            <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </button>
+            </button>-->
             <a class="navbar-brand" href="/dashboard">PRIVADIA EXCHANGE</a>
         </div>
-        <div class="collapse navbar-collapse">
+        <!--<div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="">
                     <a href="/register">
@@ -17,7 +17,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </div>-->
     </div>
 </nav>
 <div class="wrapper wrapper-full-page">
