--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -21,10 +21,12 @@
                     </div>
                     <div class="col-xs-2">
                         <datetimepicker-field-cmp [data]="{title: 'Check In', name: 'CheckIn', value: '06/21/2017'}"
+                                                  [classes]="{withIcon: true}"
                                                   [group]="filterForm"></datetimepicker-field-cmp>
                     </div>
                     <div class="col-xs-2">
                         <datetimepicker-field-cmp [data]="{title: 'Check Out', name: 'CheckOut', value: '06/21/2017'}"
+                                                  [classes]="{withIcon: true}"
                                                   [group]="filterForm"></datetimepicker-field-cmp>
                     </div>
                     <div class="col-xs-2">
