--- a/app/components/form-fields/datetimepicker-field/datetimepicker-field.component.html
+++ b/app/components/form-fields/datetimepicker-field/datetimepicker-field.component.html
@@ -1,5 +1,6 @@
-<div [formGroup]="filterForm" class="input-group">
-    <span class="input-group-addon"><i class="material-icons">insert_invitation</i></span>
+<div [formGroup]="filterForm"
+     [ngClass]="{'input-group': classes.withIcon}" >
+    <span *ngIf="classes.withIcon" class="input-group-addon"><i class="material-icons">insert_invitation</i></span>
     <div class="form-group label-floating">
         <label class="control-label">{{data.title}}</label>
         <input type="text"
