--- a/app/pages/dashboard/dashboard.component.html
+++ b/app/pages/dashboard/dashboard.component.html
@@ -25,6 +25,7 @@
                                   cloud-name="privadia"
                                   class="md-card-image"
                                   crop="fill"
+                                  gravity="auto"
                                   quality="80"
                                   height="200"
                                   width="600"
