--- a/app/pages/dashboard/dashboard.component.html
+++ b/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,10 @@
 <div class="main-content">
     <div class="container-fluid">
-        <button class="btn btn-primary btn-raised btn-round" data-toggle="modal" data-target="#myModal">
-            Classic modal
+        <button class="btn btn-success btn-raised" data-toggle="modal" data-target="#inquiry">
+            Create an Inquiry
+        </button>
+        <button class="btn btn-success btn-raised" data-toggle="modal" data-target="#proposal">
+            Create a Proposal
         </button>
         <div class="row filter">
         	<dashboard-filter-cmp [metafilters]="dashboardService.metadata"></dashboard-filter-cmp>
@@ -14,7 +17,84 @@
 <div class="loading-gif" [hidden]="!dashboardService.isReading">
 	<img src="../assets/img/loading.gif"/>
 </div>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="proposal" tabindex="-1" role="dialog" aria-labelledby="proposalLabel" aria-hidden="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form [formGroup]="proposalForm">
+                <div class="modal-header">
+                    <h5 class="m-t-25 m-b-none text-center">Create a Proposal</h5>
+                </div>
+                <div class="modal-body m-t-none">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="material-icons">person</i></span>
+                                <input-field-cmp
+                                        [data]="{title: 'Client Name', name: 'ClientName', value: '', type: 'text'}"
+                                        [static]="true"
+                                        [group]="proposalForm"></input-field-cmp>
+                            </div>
+                        </div>
+                        <div class="col-xs-6">
+                            <datetimepicker-field-cmp [data]="{title: 'Check In', name: 'CheckIn'}"
+                                                      [classes]="{withIcon: true}"
+                                                      [group]="proposalForm"></datetimepicker-field-cmp>
+                        </div>
+                        <div class="col-xs-6">
+                            <datetimepicker-field-cmp [data]="{title: 'Check Out', name: 'CheckOut'}"
+                                                      [classes]="{withIcon: false}"
+                                                      [group]="proposalForm"></datetimepicker-field-cmp>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="material-icons">local_post_office</i></span>
+                                <input-field-cmp
+                                        [data]="{title: 'Rental Price', name: 'RentalPrice', type: 'text'}"
+                                        [group]="proposalForm"></input-field-cmp>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="material-icons">local_post_office</i></span>
+                                <input-field-cmp
+                                        [data]="{title: 'Booking Price', name: 'BookingPrice', type: 'text'}"
+                                        [static]="true"
+                                        [group]="proposalForm"></input-field-cmp>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div class="btn-toolbar">
+                                <button class="btn btn-success btn-simple m-none" type="button">Terms</button>
+                            </div>
+                            <div class="btn-toolbar">
+                                <button class="btn btn-success btn-simple m-none" type="button">Payment Terms</button>
+                            </div>
+                        </div>
+                        <div class="col-xs-6">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="row">
+                        <button type="button" class="btn btn-success">Submit</button>
+                    </div>
+                    <div class="row">
+                        <button type="button" class="btn btn-simple" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="inquiry" tabindex="-1" role="dialog" aria-labelledby="inquiryLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <form [formGroup]="enquiryForm">
