--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -119,12 +119,15 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 /**
  *  Margin and padding
  */
+.m-none {
+	margin: 0px;
+}
 .m-l-r-none {
 	margin-left: 0px;
 	margin-right: 0px;
 }
 .m-t-none {
-	margin-top: 0px;
+	margin-top: 0px !important;
 }
 .m-b-none {
 	margin-bottom: 0px;
@@ -165,6 +168,11 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .p-l-r-40 {
 	padding-left: 40px !important;
 	padding-right: 40px !important;
+}
+.divider {
+	margin: 20px 0;
+	height: 1px;
+	background-color: #747879;
 }
 
 
@@ -475,6 +483,8 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .modal-dialog {
 	border-radius: 10px;
 	overflow: hidden;
+	box-shadow: 0px 5px 10px 0 rgba(0, 0, 0, 0.35);
+	background-color: #fff;
 }
 .modal-dialog .modal-content .modal-header{
 	padding: 0px;
