--- a/app/components/meta-filter-components/metafilter.component.html
+++ b/app/components/meta-filter-components/metafilter.component.html
@@ -1,5 +1,6 @@
+<!--
 <metafilter-heading-cmp [name]="metadata.Name" [group]="propertyForm"></metafilter-heading-cmp>
-
+-->
 <div [formGroup]="propertyForm">
     <div formGroupName="MetaDataTmp">
         <div *ngFor="let subtype of metadata.MetaDataSubTypes">
@@ -36,27 +37,39 @@
     </div>
 </div>
 <!--
-<div class="panel-heading" role="tab" id="heading-{{subtype.Id}}">
-    <a role="button" data-toggle="collapse" [attr.data-parent]="'#metadata-'+metadata.Id" href="#{{subtype.Id}}" aria-expanded="true" [attr.aria-controls]="subtype.Id">
-        <h4 class="panel-title">
-            {{subtype.Name}}
-            <i class="material-icons">keyboard_arrow_down</i>
-        </h4>
-    </a>
-</div>
-<div id="{{subtype.Id}}" class="panel-collapse collapse in" role="tabpanel" [attr.aria-labelledby]="'heading-'+subtype.Id">
-    <div class="panel-body">
-        <button class="subtype-filter btn btn-sm {{ metafilters[option.controls.MetaDataId.value] ? 'btn-success' : 'btn-default'}}"
-                *ngFor="let option of propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].controls; let i = index"
-                [attr.option-id]="option.controls.MetaDataId.value"
-                [attr.option-name]="option.controls.MetaDataName.value"
-                [attr.option-subtype]="subtype.Id"
-                [attr.option-index]="i" (click)="subfilterChange($event)">
-<span class="btn-label">
-    <i class="material-icons">{{ metafilters[option.controls.MetaDataId.value] ? 'check' : 'close' }}</i>
-</span>
-            {{option.controls.MetaDataName.value}}
-        </button>
+<div [formGroup]="propertyForm">
+    <div formGroupName="MetaDataTmp">
+        <div *ngFor="let subtype of metadata.MetaDataSubTypes">
+            <div class="row" formArrayName="{{'type_' + subtype.Id}}">
+                <div class="col-xs-3">
+                    <select class="metafilter-select selectpicker "
+                            data-style="select-with-transition"
+                            title="{{subtype.Name}}"
+                            data-size="7"
+                            multiple
+                            [(ngModel)]="metafiltersModel"
+                            [ngModelOptions]="{standalone: true}"
+                            (ngModelChange)="subfilterModelChange($event, 'type_' + subtype.Id)">
+                        <option *ngFor="let option of propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].controls; let i = index"
+                                [formGroupName]="i"
+                                [ngValue]="option.value">
+                            {{option.controls.MetaDataName.value}}
+                        </option>
+                    </select>
+                </div>
+                <div class="col-xs-9">
+                    <div class="bootstrap-tagsinput">
+                        <span *ngFor="let option of propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].controls; let i = index">
+                            <span class="tag label label-info"
+                                  *ngIf="option.controls.Available.value">
+                                {{option.controls.MetaDataName.value}}
+                                <span data-role="remove" (click)="removeMetafilter({index: i, type: 'type_' + subtype.Id})"></span>
+                            </span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 -->
