--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -66,16 +66,21 @@
                         </ul>
                         <div class="tab-content m-l-r-20-negative m-t-25">
                             <!--  Property Info  -->
-                            <div id="metatab-info" class="card-content p-b-none p-l-r-none p-t-none" *ngIf="isLoad">
-                                <propertyinfo-cmp [group]="propertyForm" [errorForm]="errorForm"></propertyinfo-cmp>
+                            <div id="metatab-info" class="card-content p-b-none p-l-r-none p-t-none">
+                                <propertyinfo-cmp *ngIf="isLoad"
+                                                  [group]="propertyForm"
+                                                  [errorForm]="errorForm"></propertyinfo-cmp>
                             </div>
                             <!--  Property Image  -->
-                            <div id="metatab-images" class="card-content p-b-none p-l-r-none p-t-none" *ngIf="isLoad">
-                                <propertyimage-cmp [group]="propertyForm"></propertyimage-cmp>
+                            <div id="metatab-images" class="card-content p-b-none p-l-r-none p-t-none">
+                                <propertyimage-cmp *ngIf="isLoad"
+                                                   [group]="propertyForm"></propertyimage-cmp>
                             </div>
                             <!--  Property Availability -->
                             <div id="metatab-availability" class="card-content p-b-none p-t-none">
-                                <calendar-cmp [group]="propertyForm" [errorForm]="errorForm"></calendar-cmp>
+                                <calendar-cmp *ngIf="isLoad"
+                                              [group]="propertyForm"
+                                              [errorForm]="errorForm"></calendar-cmp>
                             </div>
                             <!--  Property Marketing  -->
                             <div id="metatab-marketing" class="card-content p-b-none p-l-r-none p-t-none">
@@ -91,25 +96,25 @@
                             <div id="metatab-property-3" class="card-content p-b-none p-t-none">
                                 <property-metafilter-cmp *ngIf="dashboardService.metadata[2]"
                                                          [group]="propertyForm"
-                                                         [metadata]="dashboardService.metadata[2]" #localActivities></property-metafilter-cmp>
+                                                         [metadata]="dashboardService.metadata[2]"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-6" class="card-content p-b-none p-t-none">
                                 <property-metafilter-cmp *ngIf="dashboardService.metadata[5]"
                                                          [group]="propertyForm"
-                                                         [metadata]="dashboardService.metadata[5]" #features></property-metafilter-cmp>
+                                                         [metadata]="dashboardService.metadata[5]"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-2" class="card-content p-b-none p-t-none">
                                 <property-metafilter-cmp *ngIf="dashboardService.metadata[1]"
                                                          [group]="propertyForm"
-                                                         [metadata]="dashboardService.metadata[1]" #services></property-metafilter-cmp>
+                                                         [metadata]="dashboardService.metadata[1]"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-1" class="card-content p-b-none p-t-none">
                                 <property-metafilter-cmp *ngIf="dashboardService.metadata[0]"
                                                          [group]="propertyForm"
-                                                         [metadata]="dashboardService.metadata[0]" #trip></property-metafilter-cmp>
+                                                         [metadata]="dashboardService.metadata[0]"></property-metafilter-cmp>
                             </div>
                         </div>
                     </div>
@@ -131,33 +136,6 @@
                         </div>
                     </div>
                 </div>
-                <!--
-                <div class="text-center">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" formControlName="Active" checked="checked"> Active
-                        </label>
-                    </div>
-                    <button class="subtype-filter btn btn-primary secondary-color hover-primary-color shadow-grey" type="submit">
-                            <span class="btn-label">
-                                <i class="material-icons">add</i>
-                            </span>
-                        Save
-                    </button>
-                    <button class="subtype-filter btn btn-primary secondary-color hover-primary-color shadow-grey" type="button" (click)="continueInfo()">
-                            <span class="btn-label">
-                                <i class="material-icons">save</i>
-                            </span>
-                        Save & Continue
-                    </button>
-                    <button class="subtype-filter btn btn-primary secondary-color hover-primary-color shadow-grey" type="button" (click)="discardInfo()">
-                            <span class="btn-label">
-                                <i class="material-icons">close</i>
-                            </span>
-                        Cancel
-                    </button>
-                </div>
-                -->
             </form>
         </div>
     </div>
