--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -69,6 +69,11 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	box-shadow: 0px 2px 4px 0 rgba(75, 75, 75, 0.4);
 	border-radius: 5px;
 }
+.card [data-background-color="darkblue"] {
+	background: #0b5a7c;
+	box-shadow: 0px 2px 4px 0 rgba(75, 75, 75, 0.4);
+	border-radius: 5px;
+}
 .card-title {
 	font-size: 16px;
 	text-transform: uppercase;
