--- a/app/pages/message/message.component.html
+++ b/app/pages/message/message.component.html
@@ -55,8 +55,10 @@
                                     <td>
                                         <div class="enquiry-status accepted">Accepted</div>
                                     </td>
-                                    <td class="icons">
-                                        <i class="material-icons">delete</i>
+                                    <td>
+                                        <button class="btn btn-simple btn-icon">
+                                            <i class="material-icons">delete</i>
+                                        </button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -78,8 +80,10 @@
                                     <td>
                                         <div class="enquiry-status accepted">Accepted</div>
                                     </td>
-                                    <td class="icons">
-                                        <i class="material-icons">delete</i>
+                                    <td>
+                                        <button class="btn btn-simple btn-icon">
+                                            <i class="material-icons">delete</i>
+                                        </button>
                                     </td>
                                 </tr>
                                 <tr class="unread">
@@ -103,8 +107,10 @@
                                     <td>
                                         <div class="enquiry-status"></div>
                                     </td>
-                                    <td class="icons">
-                                        <i class="material-icons">delete</i>
+                                    <td>
+                                        <button class="btn btn-simple btn-icon">
+                                            <i class="material-icons">delete</i>
+                                        </button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -126,8 +132,10 @@
                                     <td>
                                         <div class="enquiry-status declined">Declined</div>
                                     </td>
-                                    <td class="icons">
-                                        <i class="material-icons">delete</i>
+                                    <td>
+                                        <button class="btn btn-simple btn-icon">
+                                            <i class="material-icons">delete</i>
+                                        </button>
                                     </td>
                                 </tr>
                                 </tbody>
