--- a/app/components/dashboard-filter/dashboard-filter.component.css
+++ b/app/components/dashboard-filter/dashboard-filter.component.css
@@ -7,12 +7,12 @@
     border-radius:0px;
     box-shadow: 0px 5px 10px 0 rgba(170, 168, 168, 0.4);
 }
+.input-group .input-group-addon {
+    padding-top: 15px;
+}
 .filter-card .input-group .material-icons {
     color: #5399bc;
     font-size: 18px;
-}
-.filter-card .input-group .material-icons.non-icon {
-    font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 .btn-fab {
     position: absolute;
