--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-xs-2">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="material-icons non-icon">$</i></span>
+                            <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
                             <input-field-cmp
                                     [data]="{title: 'From ($)', name: 'MinRate', type: 'number'}"
                                     [group]="filterForm"></input-field-cmp>
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-xs-2">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="material-icons">$</i></span>
+                            <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
                             <input-field-cmp
                                     [data]="{title: 'To $', name: 'MaxRate', type: 'number'}"
                                     [group]="filterForm"></input-field-cmp>
