--- a/app/components/dashboard-filter/dashboard-filter.component.css
+++ b/app/components/dashboard-filter/dashboard-filter.component.css
@@ -9,6 +9,7 @@
 }
 .input-group .input-group-addon {
     padding-top: 15px;
+    padding-left: 0px;
 }
 .filter-card .input-group .material-icons {
     color: #5399bc;
