--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -3,7 +3,7 @@
         <div class="card-content">
             <form [formGroup]="filterForm" (ngSubmit)="onSubmit(filterForm.value)">
                 <div class="row">
-                    <div class="col-xs-2">
+                    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
                             <input-field-cmp
@@ -11,7 +11,7 @@
                                     [group]="filterForm"></input-field-cmp>
                         </div>
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
                             <input-field-cmp
@@ -19,22 +19,22 @@
                                     [group]="filterForm"></input-field-cmp>
                         </div>
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <datetimepicker-field-cmp [data]="{title: 'Check In', name: 'CheckIn'}"
                                                   [classes]="{withIcon: true}"
                                                   [group]="filterForm"></datetimepicker-field-cmp>
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <datetimepicker-field-cmp [data]="{title: 'Check Out', name: 'CheckOut'}"
                                                   [classes]="{withIcon: true}"
                                                   [group]="filterForm"></datetimepicker-field-cmp>
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <input-field-cmp
                                 [data]="{title: 'Bedrooms', name: 'Bedrooms', type: 'number'}"
                                 [group]="filterForm"></input-field-cmp>
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <select-field-cmp *ngIf="dashboardService.regions.length"
                                 [data]="{title: 'Locations', name: 'Regions', type: 'number'}"
                                 [regions]="dashboardService.regions"
