--- a/app/components/form-fields/datetimepicker-field/datetimepicker-field.component.css
+++ b/app/components/form-fields/datetimepicker-field/datetimepicker-field.component.css
@@ -1,5 +1,6 @@
 .input-group .input-group-addon {
     padding-top: 15px;
+    padding-left: 0px;
 }
 .input-group .material-icons {
     color: #5399bc;
